--- a/style.css
+++ b/style.css
@@ -4,21 +4,78 @@ body {
     margin: 20px;
 }
 
+/* Styling for body above and the quiz text below. */
+
+.quiz-description {
+    font-size: 18px;
+    text-align: center !important;
+    margin: 0 auto 20px;
+    font-weight: bold;
+}
+
 #quiz-container {
     display: none;
 }
 
+/* start button colors. */
+
 button {
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
+    background-color: darkblue;
+    color: white;
 }
 
 #question-container {
     margin-top: 20px;
+    font-size: 24px;
+}
+
+/* Answer choice button color, sizing. Set max-width to ensure all box's were the same size. */
+
+.choice-btn {
+   display: block;
+    margin: 10px auto;
+    width: 200px;
+    padding: 10px 20px;
+    font-size: 16px; /* Increase answer text size */
+    cursor: pointer;
+    background-color: darkblue; /* Dark blue background color */
+    color: white; /* White text color */
+    text-align: center;
+}
+
+#timer-container {
+    font-size: 18px; /* Increase timer text size */
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 #result-container {
     margin-top: 20px;
+    font-size: 24px;
 }
+
+#save-score-container {
+    display: none;
+    margin-top: 20px;
+  }
+  
+  #initials-input {
+    margin-right: 10px;
+  }
+
+  /* set colors for submit and back buttons. */
+  
+  #submit-btn,
+  #back-btn {
+    padding: 10px 20px;
+    width: 200;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: darkblue;
+    color: white;
+  }
 
